--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "clean-css": "~2.0.7",
     "clone": "0.1.16",
     "csv2geojson": "3.6.1",
-    "d3": "3.4.11",
-    "d3-metatable": "0.3.0",
+    "d3": "^4.12.0",
+    "d3-metatable": "^1.0.0",
     "detect-json-indent": "0.0.0",
     "escape-html": "^1.0.1",
     "filesaver.js": "0.1.0",
@@ -35,7 +35,6 @@
     "polytogeojson": "0.0.1",
     "qs-hash": "0.0.0",
     "shp-write": "0.2.3",
-    "smash": "0.0.11",
     "store": "1.3.14",
     "togeojson": "0.5.0",
     "tokml": "0.3.0",
