--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "d3-metatable": "^1.0.0",
     "detect-json-indent": "0.0.0",
     "escape-html": "^1.0.1",
+    "express": "^4.16.2",
     "filesaver.js": "0.1.0",
     "geojson-extent": "^0.3.1",
     "geojson-flatten": "~0.1.0",
