--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "csv2geojson": "3.6.1",
     "d3": "^4.12.0",
     "d3-metatable": "^1.0.0",
+    "decode-html": "^2.0.0",
     "detect-json-indent": "0.0.0",
+    "encode-html": "^1.0.1",
     "escape-html": "^1.0.1",
     "express": "^4.16.2",
     "filesaver.js": "0.1.0",
